--- a/index.html
+++ b/index.html
@@ -33,10 +33,331 @@
     </section>
 </main>
 
+<div id="main_app" style="display: none;">
+
+    <header class="mb-3">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-purple shadow-sm">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <i class="bi bi-shop"></i>POS System
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="nav_dashboard"><i class="bi bi-grid-fill"></i> Dashboard</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="nav_customers"><i class="bi bi-people-fill"></i> Customers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="nav_items"><i class="bi bi-box-seam-fill"></i> Items</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="nav_orders"><i class="bi bi-cart-fill"></i> Place Order</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="nav_order_history"><i class="bi bi-clock-history"></i> Order History</a>
+                        </li>
+                    </ul>
+                    <button class="btn btn-outline-light" id="logout_btn"><i class="bi bi-box-arrow-right"></i> Logout</button>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main id="dashboard_content" class="container">
+        <div class="row">
+            <div class="col-12 text-center mb-4">
+                <h2>Welcome to the Dashboard</h2>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card text-white bg-primary shadow">
+                    <div class="card-body text-center">
+                        <h1 id="total_customers_card">0</h1>
+                        <h4>Total Customers</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card text-white bg-success shadow">
+                    <div class="card-body text-center">
+                        <h1 id="total_items_card">0</h1>
+                        <h4>Total Items</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="card text-white bg-warning shadow">
+                    <div class="card-body text-center">
+                        <h1 id="total_orders_card">0</h1>
+                        <h4>Total Orders</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
+    <main id="customer_content" class="container">
+        <section class="row">
+            <div class="col-12 col-lg-4 mb-3">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h3 class="text-center text-purple">Customer Management</h3>
+                        <form id="customer_form">
+                            <div class="mb-3">
+                                <label for="customer_id" class="form-label">Customer ID (C001)</label>
+                                <input type="text" class="form-control" id="customer_id">
+                                <div class="invalid-feedback" id="customer_id_feedback"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="customer_name" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="customer_name">
+                                <div class="invalid-feedback" id="customer_name_feedback"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="customer_address" class="form-label">Address</label>
+                                <input type="text" class="form-control" id="customer_address">
+                                <div class="invalid-feedback" id="customer_address_feedback"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="customer_contact" class="form-label">Contact</label>
+                                <input type="text" class="form-control" id="customer_contact">
+                                <div class="invalid-feedback" id="customer_contact_feedback"></div>
+                            </div>
+
+                            <div class="d-flex justify-content-around">
+                                <button type="button" class="btn btn-success" id="customer_save_btn">Save</button>
+                                <button type="button" class="btn btn-primary" id="customer_update_btn">Update</button>
+                                <button type="button" class="btn btn-danger" id="customer_delete_btn">Delete</button>
+                                <button type="reset" class="btn btn-info" id="customer_clear_btn">Clear</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-8">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead class="bg-light">
+                    <tr>
+                        <th>ID</th>
+                        <th>Name</th>
+                        <th>Address</th>
+                        <th>Contact</th>
+                    </tr>
+                    </thead>
+                    <tbody id="customer_tbl_body">
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </main>
+
+    <main id="item_content" class="container">
+        <section class="row">
+            <div class="col-12 col-lg-4 mb-3">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h3 class="text-center text-purple">Item Management</h3>
+                        <form id="item_form">
+                            <div class="mb-3">
+                                <label for="item_code" class="form-label">Item Code (I001)</label>
+                                <input type="text" class="form-control" id="item_code">
+                                <div class="invalid-feedback" id="item_code_feedback"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="item_name" class="form-label">Name</label>
+                                <input type="text" class="form-control" id="item_name">
+                                <div class="invalid-feedback" id="item_name_feedback"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="item_price" class="form-label">Unit Price</label>
+                                <input type="text" class="form-control" id="item_price">
+                                <div class="invalid-feedback" id="item_price_feedback"></div>
+                            </div>
+                            <div class="mb-3">
+                                <label for="item_qty" class="form-label">Quantity on Hand</label>
+                                <input type="text" class="form-control" id="item_qty">
+                                <div class="invalid-feedback" id="item_qty_feedback"></div>
+                            </div>
+
+                            <div class="d-flex justify-content-around">
+                                <button type="button" class="btn btn-success" id="item_save_btn">Save</button>
+                                <button type="button" class="btn btn-primary" id="item_update_btn">Update</button>
+                                <button type="button" class="btn btn-danger" id="item_delete_btn">Delete</button>
+                                <button type="reset" class="btn btn-info" id="item_clear_btn">Clear</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-8">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead class="bg-light">
+                    <tr>
+                        <th>Code</th>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Quantity</th>
+                    </tr>
+                    </thead>
+                    <tbody id="item_tbl_body">
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </main>
+
+    <main id="order_content" class="container">
+        <section class="row">
+            <div class="col-12 text-center mb-3">
+                <h2 class="text-purple">Place New Order</h2>
+            </div>
+
+            <div class="col-12 col-lg-4 mb-3">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5>Invoice Details</h5>
+                        <div class="mb-3">
+                            <label for="order_id" class="form-label">Order ID</label>
+                            <input type="text" class="form-control" id="order_id" readonly>
+                        </div>
+                        <div class="mb-3">
+                            <label for="order_date" class="form-label">Date</label>
+                            <input type="date" class="form-control" id="order_date" readonly>
+                        </div>
+                        <div class="mb-3">
+                            <label for="order_customer_select" class="form-label">Customer</label>
+                            <select class="form-select" id="order_customer_select">
+                                <option selected disabled>Select Customer</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="order_customer_name" class="form-label">Customer Name</label>
+                            <input type="text" class="form-control" id="order_customer_name" readonly>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-lg-8 mb-3">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h5>Item Select</h5>
+                        <div class="row">
+                            <div class="col-md-3">
+                                <label for="order_item_select" class="form-label">Item</label>
+                                <select class="form-select" id="order_item_select">
+                                    <option selected disabled>Select Item</option>
+                                </select>
+                            </div>
+                            <div class="col-md-3">
+                                <label for="order_item_name" class="form-label">Item Name</label>
+                                <input type="text" class="form-control" id="order_item_name" readonly>
+                            </div>
+                            <div class="col-md-2">
+                                <label for="order_item_price" class="form-label">Price</label>
+                                <input type="text" class="form-control" id="order_item_price" readonly>
+                            </div>
+                            <div class="col-md-2">
+                                <label for="order_item_qty_on_hand" class="form-label">Qty on Hand</label>
+                                <input type="text" class="form-control" id="order_item_qty_on_hand" readonly>
+                            </div>
+                            <div class="col-md-2">
+                                <label for="order_qty" class="form-label">Order Qty</label>
+                                <input type="number" class="form-control" id="order_qty">
+                                <div class="invalid-feedback" id="order_qty_feedback"></div>
+                            </div>
+                        </div>
+                        <div class="text-end mt-3">
+                            <button type="button" class="btn btn-purple" id="add_to_cart_btn"><i class="bi bi-cart-plus-fill"></i> Add to Cart</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="row">
+            <div class="col-12">
+                <table class="table table-bordered">
+                    <thead class="bg-light">
+                    <tr>
+                        <th>Item Code</th>
+                        <th>Name</th>
+                        <th>Price</th>
+                        <th>Qty</th>
+                        <th>Total</th>
+                        <th>Action</th>
+                    </tr>
+                    </thead>
+                    <tbody id="cart_tbl_body">
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
+        <section class="row justify-content-end">
+            <div class="col-12 col-lg-4">
+                <div class="card shadow-sm">
+                    <div class="card-body">
+                        <h3 class="text-center" id="net_total_display">Total: 0.00 LKR</h3>
+                        <div class="mb-3">
+                            <label for="order_discount" class="form-label">Discount (%)</label>
+                            <input type="number" class="form-control" id="order_discount" value="0">
+                        </div>
+                        <button type="button" class="btn btn-success w-100" id="purchase_btn"><i class="bi bi-check-circle-fill"></i> Place Order</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <main id="order_history_content" class="container">
+        <section class="row">
+            <div class="col-12 text-center mb-3">
+                <h2 class="text-purple">Order History</h2>
+            </div>
+            <div class="col-12">
+                <table class="table table-hover table-striped table-bordered">
+                    <thead class="bg-light">
+                    <tr>
+                        <th>Order ID</th>
+                        <th>Date</th>
+                        <th>Customer ID</th>
+                        <th>Total</th>
+                    </tr>
+                    </thead>
+                    <tbody id="order_history_tbl_body">
+                    </tbody>
+                </table>
+            </div>
+        </section>
+    </main>
+
+</div>
+
 
 <script src="assets/lib/jquery-3.7.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
+<script type="module" src="db/DB.js"></script>
+<script type="module" src="dto/CustomerDTO.js"></script>
+<script type="module" src="dto/ItemDTO.js"></script>
+<script type="module" src="dto/OrderDTO.js"></script>
+<script type="module" src="dto/OrderDetailDTO.js"></script>
+
+<script type="module" src="model/UserModel.js"></script>
+<script type="module" src="model/CustomerModel.js"></script>
+<script type="module" src="model/ItemModel.js"></script>
+<script type="module" src="model/OrderModel.js"></script>
+
+<script type="module" src="controller/CustomerController.js"></script>
+<script type="module" src="controller/ItemController.js"></script>
+<script type="module" src="controller/OrderController.js"></script>
 </body>
 </html>
