--- a/index.html
+++ b/index.html
@@ -356,6 +356,8 @@
 <script type="module" src="model/ItemModel.js"></script>
 <script type="module" src="model/OrderModel.js"></script>
 
+<script type="module" src="controller/NavigationController.js"></script>
+<script type="module" src="controller/ValidationController.js"></script>
 <script type="module" src="controller/CustomerController.js"></script>
 <script type="module" src="controller/ItemController.js"></script>
 <script type="module" src="controller/OrderController.js"></script>
